// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render a custom icon when the icon is a react node 1`] = `
<div
  class="alert info"
>
  <div
    class="iconContainer"
  >
    <img
      alt="custom-icon"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render an alert with a close icon when onClose prop is passed  1`] = `
<div
  class="alert info closable"
>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
  <div
    aria-label="Close Icon"
    class="close"
  >
    <img
      alt="close-icon"
      class="closeIcon"
      src="test-file-stub"
    />
  </div>
</div>
`;

exports[`<Alert /> should render an alert with a message with a default info type without icon 1`] = `
<div
  class="alert info"
>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render an alert with an icon when icon prop is passed 1`] = `
<div
  class="alert info"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render an alert with custom actions 1`] = `
<div
  class="alert info"
>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
    <div
      class="customActions"
    >
      <button>
        Click this !
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should render icon for error alert type 1`] = `
<div
  class="alert error"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render icon for info alert type 1`] = `
<div
  class="alert info"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render icon for success alert type 1`] = `
<div
  class="alert success"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;

exports[`<Alert /> should render icon for warning alert type 1`] = `
<div
  class="alert warning"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      This is an alert!
    </span>
  </div>
</div>
`;
